# guardkitfactory

./: .dockerignore  .gitignore  Dockerfile  README.md  command_history.md  coverage.json  langgraph.json  place-documents.sh  pyproject.toml
.claude/: CLAUDE.md  manifest.json  settings.json
.claude/agents/: adversarial-cooperation-architect.md  deepagents-factory-specialist.md  domain-driven-config-specialist.md  langchain-tool-specialist.md  langgraph-entrypoint-specialist.md  pytest-factory-test-specialist.md  system-prompt-engineer.md
.claude/hooks/: capture_slash_command.py
.claude/reviews/: TASK-REV-3EEE-review-report.md  TASK-REV-A7D3-review-report.md  TASK-REV-CG44-review-report.md  TASK-REV-DEA8-review-report.md  TASK-REV-F09A-review-report.md  TASK-REV-F0E4-report.md  TASK-REV-F1B8-review-report.md  TASK-REV-FW10-review-report.md  TASK-REV-IC8B-review-report.md  TASK-REV-MAG7-review-report.md  TASK-REV-NF20-review-report.md  TASK-REV-SAD3-review-report.md
.claude/rules/: testing.md
.claude/task-plans/: TASK-CGCP-004-implementation-plan.md  TASK-CGCP-005-implementation-plan.md  TASK-CGCP-006-implementation-plan.md  TASK-CGCP-007-implementation-plan.md  TASK-CGCP-008-implementation-plan.md  TASK-CGCP-009-implementation-plan.md  TASK-CGCP-010-implementation-plan.md  TASK-CGCP-011-implementation-plan.md  TASK-F009-002-implementation-plan.md  TASK-F009-003-implementation-plan.md  TASK-F009-004-implementation-plan.md  TASK-F009-005-implementation-plan.md  TASK-F009-006-implementation-plan.md  TASK-F009-007-implementation-plan.md  TASK-FW10-001-implementation-plan.md  TASK-FW10-002-implementation-plan.md  TASK-FW10-003-implementation-plan.md  TASK-FW10-004-implementation-plan.md  TASK-FW10-005-implementation-plan.md  TASK-FW10-006-implementation-plan.md  TASK-FW10-007-implementation-plan.md  TASK-FW10-008-implementation-plan.md  TASK-FW10-009-implementation-plan.md  TASK-FW10-010-implementation-plan.md  TASK-FW10-011-implementation-plan.md  TASK-GCI-003-implementation-plan.md  TASK-GCI-004-implementation-plan.md  TASK-GCI-005-implementation-plan.md  TASK-GCI-006-implementation-plan.md  TASK-GCI-007-implementation-plan.md  TASK-IC-004-implementation-plan.md  TASK-IC-005-implementation-plan.md  TASK-IC-006-implementation-plan.md  TASK-IC-007-implementation-plan.md  TASK-IC-012-implementation-plan.md  TASK-MAG7-003-implementation-plan.md  TASK-MAG7-004-implementation-plan.md  TASK-MAG7-005-implementation-plan.md  TASK-MAG7-006-implementation-plan.md  TASK-MAG7-007-implementation-plan.md  (+46 more)
.github/workflows/: ci.yml  forge-image.yml
.guardkit/: bootstrap_state.json  graphiti-query-log.jsonl  graphiti.yaml  preflight.sh
.guardkit/bdd/: TASK-FW10-001_junit.xml  TASK-FW10-002_junit.xml  TASK-FW10-006_junit.xml  TASK-FW10-008_junit.xml  TASK-FW10-009_junit.xml  TASK-FW10-010_junit.xml  TASK-FW10-011_junit.xml  TASK-GCI-003_junit.xml  TASK-GCI-004_junit.xml  TASK-GCI-005_junit.xml  TASK-GCI-006_junit.xml  TASK-GCI-007_junit.xml  TASK-IC-001_junit.xml  TASK-IC-002_junit.xml  TASK-IC-004_junit.xml  TASK-IC-007_junit.xml  TASK-IC-010_junit.xml  TASK-IC-012_junit.xml  TASK-MAG7-003_junit.xml  TASK-MAG7-004_junit.xml  TASK-MAG7-005_junit.xml  TASK-MAG7-006_junit.xml  TASK-MAG7-007_junit.xml  TASK-MAG7-008_junit.xml  TASK-MAG7-009_junit.xml  TASK-MAG7-010_junit.xml  TASK-MAG7-011_junit.xml  TASK-MAG7-012_junit.xml  TASK-MAG7-013_junit.xml  TASK-MAG7-014_junit.xml  TASK-PSM-002_junit.xml  TASK-PSM-004_junit.xml  TASK-PSM-007_junit.xml  TASK-PSM-008_junit.xml  TASK-PSM-009_junit.xml
.guardkit/features/: FEAT-8D10.yaml  FEAT-CBDE.yaml  FEAT-DEA8.yaml  FEAT-FORGE-001.yaml  FEAT-FORGE-002.yaml  FEAT-FORGE-003.yaml  FEAT-FORGE-004.yaml  FEAT-FORGE-005.yaml  FEAT-FORGE-008.yaml  FEAT-FORGE-009.yaml
.guardkit/smoke/: feat-forge-001-smoke.py
.guardkit/worktrees/: nats-core
docs/architecture/: ARCHITECTURE.md  assumptions.yaml
docs/handoffs/: F8-007a-nats-canonical-provisioning.md  F8-007a-status-update-canonical-nats-live.md
docs/history/: RUNBOOK-FEAT-FORGE-008-validation-run-1.md  RUNBOOK-FEAT-FORGE-009-bootstrap-prep.md  autobuild-FEAT-8D10-history.md  autobuild-FEAT-CBDE-history.md  autobuild-FEAT-DEA8-success-history.md  autobuild-FEAT-FOREGE-009-after-claude-fix-symlink.md  autobuild-FEAT-FORGE-001-history.md  autobuild-FEAT-FORGE-008-history.md  autobuild-FEAT-FORGE-009-fail-after-symlink-history.md  autobuild-FEAT-FORGE-009-failure-run-1-history.md  autobuild-FEAT-FORGE-009-mac-fails.md  autobuild-FEAT-FORGE-009-success-history.md  autobuild-FEAT-FORGE-010-fail-run-1-history.md  autobuild-feature-FEAT-DEA8-fail-run2-history.md  command-history.md  feature-plan-FEAT-FORGE-001-history.md  feature-plan-FEAT-FORGE-003-history.md  feature-plan-FEAT-FORGE-004-history.md  feature-plan-FEAT-FORGE-005-history.md  feature-plan-FEAT-FORGE-006-history.md  feature-plan-FEAT-FORGE-007-history.md  feature-plan-FEAT-FORGE-008-history.md  feature-plan-FEAT-FORGE-009-history.md  feature-plan-pipeline-state-machine-and-configuration-history.md  feature-plan-wire-the-production-pipeline-orchestrator-history.md  feature-spec-FEAT-FORGE-002-history.md  feature-spec-FEAT-FORGE-003-history.md  feature-spec-FEAT-FORGE-008-history.md  feature-spec-FEAT-FORGE-009-history.md  feature-spec-wire-the-production-pipeline-orchestrator-history.md  portfolio-py314-rebaseline-pytest.txt  review-TASK-REV-F008-history.md  review-TASK-REV-F09A-history.md  system-arch-history.md  system-design-history.md
docs/research/: forge-build-plan-alignment-review.md  forge-orchestrator-wiring-feature-context.md  forge-orchestrator-wiring-gap.md  forge-pipeline-architecture.md  pipeline-orchestrator-consolidated-build-plan.md  pipeline-orchestrator-conversation-starter.md  pipeline-orchestrator-motivation.md
docs/reviews/: REVIEW-F008-validation-triage.md
lib/: __init__.py  factory_guards.py  json_extractor.py  retry_context.py  session_logging.py
scripts/: ac006_smoke_probe.py  ac006_smoke_probe_b.py  ac006_smoke_probe_c.py  build-image.sh
tests/: test_approval_config.py  test_forge_config.py  test_smoke.py
(+1527 files in other folders)
