[project]
name = "forge"
version = "0.1.0"
description = "Pipeline orchestrator and checkpoint manager for the Software Factory"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Richard Woollcott", email = "rich@appmilla.com" },
]
dependencies = [
    # TASK-FIX-F0E9: `click` is imported directly by 6 modules under
    # src/forge/cli/ (TASK-PSM-012's CLI wiring). Pre-LCP-001 it was
    # provided transitively by langchain-anthropic>=0.2 / langchain-openai>=0.2;
    # the LCP-001 pin tightening to >=1.4,<2 / >=1.2,<2 dropped it from the
    # resolved set, breaking `forge --help` with ModuleNotFoundError. Pinned
    # explicitly here so the console-script entry point (`[project.scripts]`
    # below) survives any future transitive churn.
    "click>=8,<9",
    "deepagents>=0.5.3,<0.6",
    "langchain>=1.2,<2",
    "langchain-core>=1.3,<2",
    "langgraph>=1.1,<2",
    "langchain-community>=0.4,<0.5",
    "langchain-anthropic>=1.4,<2",
    "nats-core>=0.2.0,<0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    # TASK-FIX-F0E10: `rich` is imported directly by `src/forge/cli/status.py`
    # (TASK-PSM-012's status-rendering wiring uses `rich.console.Console`).
    # Pre-LCP-001 it was provided transitively by the 0.x-band langchain-*
    # resolution (langchain-core / langchain-anthropic 0.x pulled `rich`
    # via their CLI/streaming helpers). The LCP-001 pin tightening to
    # >=1.x dropped it from the resolved set, breaking `forge --help`
    # with ModuleNotFoundError after F0E9 closed the click iceberg.
    # Pinned explicitly so the console-script entry point survives any
    # future transitive churn (same trapdoor pattern as F0E9).
    "rich>=13,<15",
]

[project.optional-dependencies]
# Every LangChain integration this template can be configured to use MUST appear here.
# See TASK-REV-LES1 / LES1 §3 LCOI — provider swaps happen via orchestrator-config.yaml,
# so all supported providers must be declarable in one install command.
providers = [
    "langchain-openai>=1.2,<2",
    "langchain-google-genai>=4.2,<5",
]
# TASK-FIX-F0E7 (per TASK-REV-F0E4 §5.2): mirrored from [dependency-groups].dev
# below. PEP 735's [dependency-groups] is read by `uv sync --group dev`,
# NOT by `uv pip install -e ".[dev]"`. The GuardKit portfolio-pinning
# recipe uses the latter form, so dev deps must be declared as an extra
# here as well as in [dependency-groups]. Keep these two lists in sync.
# `pytest-asyncio` is required because the test suite has 100+
# `@pytest.mark.asyncio` decorators; without the plugin loaded, every
# async test fails with `Failed: async def functions are not natively
# supported` (162 such failures observed in TASK-REV-F0E4's empirical run).
dev = [
    "pytest>=9.0.2",
    "pytest-bdd>=8.1,<9",
    "pytest-asyncio>=1,<2",
]

# TASK-PSM-012: Console-script entry point for the ``forge`` CLI.
# ``pip install`` (or ``pip install -e .``) writes a ``forge`` shim to the
# active environment's ``bin/`` directory pointing at the Click group
# defined in ``forge.cli.main:main``. The dotted path matches the
# entry-point assertion baked into ``tests/forge/test_cli_main.py``
# (``test_module_dotted_path_matches_pyproject_entry_point``); changing
# either side without the other breaks the install-time wiring.
[project.scripts]
forge = "forge.cli.main:main"

[dependency-groups]
# PEP 735 dev group — read by `uv sync --group dev`. Mirrored into
# [project.optional-dependencies].dev above so `uv pip install -e ".[dev]"`
# also works (see TASK-FIX-F0E7 / TASK-REV-F0E4 §5.2). Keep both lists in sync.
dev = [
    "pytest>=9.0.2",
    "pytest-bdd>=8.1,<9",
    "pytest-asyncio>=1,<2",
]

# TASK-FIX-F0E6 (per TASK-REV-F0E4 §5.1): the `nats-core==0.2.0` wheel
# published to PyPI is malformed — its dist-info is named
# `nats_core-0.2.0.dist-info` but the wheel's RECORD only contains
# `nats/client/...` files; the `nats_core/` namespace forge imports
# (events, envelope, manifest, topics, client) is **absent from the
# wheel**. On a fresh `uv pip install -e ".[providers]"`, 55 of 108 test
# files fail to collect with `ModuleNotFoundError: No module named
# 'nats_core'`. Until the upstream wheel is fixed and republished
# (tracked as TASK-FIX-F0E6b), resolve `nats-core` from the sibling
# working tree, which has the correct `src/nats_core/` layout. This
# mirrors jarvis's existing pattern — see jarvis/pyproject.toml.
#
# Canonical layout assumes `nats-core` is a sibling of `forge`:
#   …/appmilla_github/forge/        ← this project
#   …/appmilla_github/nats-core/    ← target of `../nats-core`
#
# Worktree note: `uv` resolves the path relative to the directory
# containing this pyproject.toml. From a worktree at
# `.guardkit/worktrees/<branch>/` the literal `../nats-core` resolves
# to `.guardkit/worktrees/nats-core`, which won't exist. For autobuild
# runs that need `uv pip install` inside a worktree, place a symlink
# at `.guardkit/worktrees/nats-core` pointing at the real sibling
# (jarvis already does this; forge will need the same once autobuild
# starts running with this dependency layout).
[tool.uv.sources]
nats-core = { path = "../nats-core", editable = true }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the SQLite DDL alongside the lifecycle package so
# ``importlib.resources.files("forge.lifecycle") / "schema.sql"`` works
# from wheel installs as well as editable / source installs. See
# TASK-PSM-002 — the schema is intentionally a real ``.sql`` file
# (not a Python string constant) so DBAs and DDR-003 reviewers can
# diff the schema directly.
"forge.lifecycle" = ["*.sql"]

[tool.pytest.ini_options]
# Source layout: production code lives under ``src/forge``. Pytest
# resolves imports via this ``pythonpath`` entry so ``import forge`` works
# without callers needing to set ``PYTHONPATH=src`` on every invocation.
# This matches how the GuardKit BDD oracle (TASK-IC-012) invokes pytest
# with the feature file as a positional arg — without this entry,
# ``tests/bdd/conftest.py`` fails to import ``forge.adapters.*`` at
# collection time and the oracle reports a synthetic BDD failure.
pythonpath = ["src"]
# pytest-bdd: feature files live alongside the source-of-truth Gherkin
# under ``features/``. Scenarios are wired to step functions in
# ``tests/bdd/``. See TASK-NFI-011.
bdd_features_base_dir = "features"
markers = [
    # Scenario-priority tags mirrored from the .feature files. CI uses these
    # to gate which subset of the BDD suite must pass per pipeline stage:
    #   * ``smoke``        — full suite on every PR (3 scenarios for FEAT-FORGE-002)
    #   * ``key_example``  — full suite on merge to main (7 scenarios)
    #   * remaining tags   — opportunistically run; explicitly @skip when
    #                        the owning subtask is not yet complete.
    "smoke: @smoke scenarios — must pass on every PR",
    "key_example: @key-example scenarios — must pass on merge to main",
    "boundary: @boundary scenarios — boundary-condition coverage",
    "negative: @negative scenarios — negative-path coverage",
    "edge_case: @edge-case scenarios — edge-case coverage",
    "security: @security scenarios — security-property coverage",
    "concurrency: @concurrency scenarios — concurrent-event coverage",
    "data_integrity: @data-integrity scenarios — data-integrity coverage",
    "integration: @integration scenarios — integration-boundary coverage",
    # Seam tests stamping the §4 Integration Contract they exercise. The
    # argument is the contract name (e.g. ``CapabilityResolution``,
    # ``CorrelationKey``); reviewers grep for the contract to find the
    # seam test that exercises it.
    "integration_contract: seam test for a §4 integration contract",
    # Feature-level tags emitted by /feature-spec onto every scenario in a
    # generated .feature file. Registered here so pytest does not warn on
    # unknown marks when pytest-bdd reflects Gherkin tags onto test items.
    "feat-forge-002: feature-level tag for FEAT-FORGE-002 NATS Fleet Integration",
    "feat-forge-003: feature-level tag for FEAT-FORGE-003 Specialist Agent Delegation",
    "feat-forge-004: feature-level tag for FEAT-FORGE-004 Confidence-Gated Checkpoint Protocol",
    "nats-fleet-integration: feature-slug tag for FEAT-FORGE-002",
    "specialist-agent-delegation: feature-slug tag for FEAT-FORGE-003",
    "confidence-gated-checkpoint-protocol: feature-slug tag for FEAT-FORGE-004",
    "key-example: synonym for ``key_example`` emitted by /feature-spec",
    "edge-case: synonym for ``edge_case`` emitted by /feature-spec",
    "data-integrity: synonym for ``data_integrity`` emitted by /feature-spec",
    "regression: regression-tagged scenarios surface from /feature-spec",
]
