[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardkitfactory"
version = "0.1.0"
description = "LangGraph-based harness for the GuardKit AutoBuild adversarial-cooperation orchestrator"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Richard Woollcott", email = "rich@appmilla.com" },
]
# Open upper bound per the GuardKit portfolio Python pinning standard
# (docs/guides/portfolio-python-pinning.md in the guardkit repo).
# Defensive upper bounds belong in CI matrices, not requires-python.
requires-python = ">=3.11"

# deepagents>=0.6.7 — floor bumped from 0.5 (2026-06-03) for relevant
# stability fixes that AutoBuild benefits from:
#   * 0.6.4 — grep crash when files vanish mid-walk (#3592)
#   * 0.6.4 — stable HumanMessage IDs across resumed threads (#3591)
#   * 0.6.5 — read_file pagination skipping lines after wrap (#3641)
#   * 0.6.5 — grep ripgrep-fallback logging + sandbox exec error returns
#   * 0.6.6 — state_schema kwarg on create_deep_agent
#   * 0.6.7 — base64 reads with unknown extensions + DeepAgentState export
# The 0.6.0 refactor moved the permission-middleware guard from
# _PermissionMiddleware to FilesystemMiddleware but kept the same
# NotImplementedError on execute-capable backends (upstream issue #2894
# closed/declined). See src/guardkitfactory/harness/permissions.py for
# the NOPERMS workaround and TASK-HMIG-002R-PERMS-CUSTOM-MIDDLEWARE for
# the restore path. <1 remains a soft guard against a 1.0 API shift.
# langgraph>=1, langchain>=1.2, langchain-core>=1.2 follow the same family
# pattern.
dependencies = [
    "deepagents>=0.6.7,<1",
    "langgraph>=1,<2",
    "langchain>=1.2,<2",
    "langchain-core>=1.2,<2",
    # The LangGraph harness builds a chat-completions ``ChatOpenAI`` for the
    # llama-swap / OpenAI-compatible substrate (langgraph_harness.py
    # ``_build_synthesis_model`` + the selector's resolved ``openai:<alias>``
    # models). Imported lazily, but REQUIRED at runtime for any OpenAI-endpoint
    # run (e.g. the GB10 llama-swap Coach/Player) — previously undeclared, so a
    # clean ``uv sync`` pruned it and the synthesis call failed at runtime.
    # (TASK-OPS-COACHMOE01, 2026-06-11.)
    "langchain-openai>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/appmilla/guardkitfactory"
"Parent review" = "https://github.com/appmilla/guardkit"

# ---------------------------------------------------------------------------
# setuptools layout
# ---------------------------------------------------------------------------
# The package lives under src/guardkitfactory/ (src layout), and the
# vendored helpers under lib/ are also shipped as an importable top-level
# `lib` package so `from lib.factory_guards import ...` works after a
# `pip install -e .`.
[tool.setuptools]
package-dir = { "" = "src", "lib" = "lib" }
packages = [
    "guardkitfactory",
    "guardkitfactory.bdd",
    "guardkitfactory.bdd.plugins",
    "guardkitfactory.harness",
    "lib",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Slow end-to-end tests (real pytest-bdd subprocess) are deselected by
# default per TASK-HMIG-007F AC-006 — CI opts in explicitly with
# `pytest -m slow tests/bdd/`.
addopts = "-m 'not slow'"
markers = [
    "slow: end-to-end tests that spawn a real subprocess (e.g. pytest-bdd)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
